setup frontend and jwt authentication